update swagger file for job, category and job applicant handler
